<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.gabe.getfitapplication.MainActivity"
        android:id="@+id/abri"
        android:background="#5955ca">

        <fragment android:name="com.example.gabe.getfitapplication.Fragment_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_fragment"
            tools:layout="@layout/login_fragment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome_message1"
            android:id="@+id/textView2"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emptyString"
            android:id="@+id/TVusername"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"
            android:textColor="#ffffff" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customerListView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="173dp"
            android:layout_below="@+id/TVusername"
            android:background="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_session"
            android:id="@+id/SessionButton"
            android:layout_marginTop="112dp"
            android:layout_below="@+id/TVusername"
            android:layout_centerHorizontal="true"
            android:onClick="onClick" />

    </RelativeLayout>
